# grpc-microservices

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  cmake-format.yaml  conanfile.py  conanfile.txt  docker-compose.yaml  ping-pong.pb.cc
cmake/: CMakeGenerateGolangRPC.cmake  GoBuild.cmake  golang.cmake
healthcheck_protofiles/: CMakeLists.txt  healthcheck.proto
matrix_client/: CMakeLists.txt  main.cpp
matrix_client/include/matrix_client/: matrix_multiplyer_client.hpp  send_healthcheck_request.hpp
matrix_protofiles/: CMakeLists.txt  mm_multiply.proto  mv_multiply.proto
matrix_server/: CMakeLists.txt  main.cpp
matrix_server/include/matrix_server/: concepts.hpp  matrix_matrix_service_impl.hpp  matrix_vector_service_impl.hpp  request_handler_impl.hpp  server.hpp  server_http.hpp  shutdown_signal_listener.hpp
matrix_server/src/: matrix_matrix_service_impl.cpp  matrix_vector_service_impl.cpp  request_handler_impl.cpp  server.cpp  shutdown_signal_listener.cpp
pingpong/: CMakeLists.txt  client_main.cpp  server_main.cpp
pingpong/include/pingpong/: client_pingpong.hpp  server_pingpong.hpp
pingpong/protofiles/: CMakeLists.txt  ping-pong.proto
pingpong/src/: client_pingpong.cpp  server_pingpong.cpp
pingpong_go/: CMakeLists.txt  main.go
pingpong_go/pingpong_client/: math_client.go
pingpong_go/protofiles/: ping-pong.pb.go  ping-pong.proto  ping-pong_grpc.pb.go
postgresql_driver/: CMakeLists.txt
postgresql_driver/include/postgres/: async_connection.hpp  connection_factory_concept.hpp  connection_pool.hpp
postgresql_driver/src/: connection_pool.cpp
postgresql_driver/tests/: test_get_connection_simple.cpp  test_main.cpp
src/: main.cpp
utils/: CMakeLists.txt
utils/include/utils/healthcheck/: healthcheck_asyncservice.hpp
utils/src/: healthcheck_asyncservice.cpp
