set(HEALTHCHECK_SERVICE_PROTOFILES_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/generated CACHE INTERNAL "")
set(HEALTHCHECK_PROTOLIB healthcheck-service-protolib CACHE INTERNAL "")
file(GLOB PROTOFILES ${CMAKE_CURRENT_LIST_DIR}/*.proto)

asio_grpc_protobuf_generate(
    GENERATE_GRPC
    GENERATE_MOCK_CODE
    OUT_VAR HEALTHCHECK_SERVICE_PROTOSOURCES
    OUT_DIR ${HEALTHCHECK_SERVICE_PROTOFILES_BINARY_DIR}
    IMPORT_DIRS ${CMAKE_CURRENT_LIST_DIR}
    PROTOS ${PROTOFILES}
)

add_library(${HEALTHCHECK_PROTOLIB} OBJECT)

target_sources(${HEALTHCHECK_PROTOLIB} PRIVATE ${HEALTHCHECK_SERVICE_PROTOSOURCES})

target_link_libraries(${HEALTHCHECK_PROTOLIB} PUBLIC
    protobuf::libprotobuf
    gRPC::grpc
    gRPC::grpc++
    gtest::gtest
)

target_include_directories(${HEALTHCHECK_PROTOLIB}
    SYSTEM PUBLIC
    $<BUILD_INTERFACE:${HEALTHCHECK_SERVICE_PROTOFILES_BINARY_DIR}>
)